--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -7,7 +7,11 @@
 
         <OutputType>Library</OutputType>
 
-        <RootNamespace>IoC.Tests</RootNamespace>
+        <RootNamespace>Depra.IoC.Tests</RootNamespace>
+
+        <AssemblyName>Depra.IoC.Tests</AssemblyName>
+
+        <Nullable>disable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
