--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -4,18 +4,31 @@
         <RootNamespace>Depra.IoC.Application</RootNamespace>
         <Authors>Nikolay Melnikov</Authors>
         <Company>Depra</Company>
-        <Product>IoC Container</Product>
-        <PackageId>Depra.IoC</PackageId>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <Description>Simple IoC container implementation.</Description>
+        <Product>Depra.IoC.Application</Product>
+        <PackageId>Depra.IoC.Application</PackageId>
+        <PackageLicenseExpression></PackageLicenseExpression>
+        <Description>Application layer of IoC Container</Description>
         <RepositoryUrl>https://github.com/Depression-aggression/IoC-Container</RepositoryUrl>
-        <PackageTags>DI, IoC, inversion, control, dependency, inversion</PackageTags>
+        <PackageTags>DI, IoC, container, inversion, control, dependency, inversion, application</PackageTags>
         <AssemblyName>Depra.IoC.Application</AssemblyName>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <Version>0.9.0</Version>
+        <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+        <Copyright>Copyright © 2022 Nikolay Melnikov. All rights reserved.</Copyright>
+        <RepositoryType>Module</RepositoryType>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Domain\Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Include="..\..\Depra.Serialization\LICENSE.md">
+        <Pack>True</Pack>
+        <PackagePath></PackagePath>
+      </None>
     </ItemGroup>
 
 </Project>
