--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -4,6 +4,24 @@
         <TargetFramework>netstandard2.0</TargetFramework>
         <AssemblyName>Depra.IoC.Domain</AssemblyName>
         <RootNamespace>Depra.IoC.Domain</RootNamespace>
+        <Version>0.9.0</Version>
+        <Authors>Nikolay Melnikov</Authors>
+        <Company>Depra</Company>
+        <Description>Domain layer of IoC Container</Description>
+        <Copyright>Copyright © 2022 Nikolay Melnikov. All rights reserved.</Copyright>
+        <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+        <RepositoryType>Module</RepositoryType>
+        <RepositoryUrl>https://github.com/Depression-aggression/IoC-Container</RepositoryUrl>
+        <PackageTags>DI, IoC, container, inversion, control, dependency, inversion, domain</PackageTags>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     </PropertyGroup>
+
+    <ItemGroup>
+      <None Include="..\..\Depra.Serialization\LICENSE.md">
+        <Pack>True</Pack>
+        <PackagePath></PackagePath>
+      </None>
+    </ItemGroup>
 
 </Project>
