--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -13,7 +13,7 @@
         <AssemblyName>Depra.IoC.Application</AssemblyName>
         <TargetFramework>netstandard2.0</TargetFramework>
         <Version>0.9.0</Version>
-        <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <Copyright>Copyright © 2022 Nikolay Melnikov. All rights reserved.</Copyright>
         <RepositoryType>Module</RepositoryType>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -21,14 +21,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Domain\Domain.csproj" />
+      <None Include="..\LICENSE">
+        <Pack>True</Pack>
+        <PackagePath>\</PackagePath>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
-      <None Include="..\..\Depra.Serialization\LICENSE.md">
-        <Pack>True</Pack>
-        <PackagePath></PackagePath>
-      </None>
+      <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
 </Project>
