--- a/Develop/Develop.csproj
+++ b/Develop/Develop.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Application\Application.csproj" />
+      <ProjectReference Include="..\IoC\IoC.csproj" />
     </ItemGroup>
 
 </Project>
