--- a/IoC.UnitTests/IoC.UnitTests.csproj
+++ b/IoC.UnitTests/IoC.UnitTests.csproj
@@ -12,6 +12,8 @@
         <AssemblyName>Depra.IoC.UnitTests</AssemblyName>
 
         <Nullable>disable</Nullable>
+
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
