--- a/IoC/IoC.csproj
+++ b/IoC/IoC.csproj
@@ -14,7 +14,7 @@
         <PackageTags>DI, IoC, container, inversion, control, dependency, inversion, domain</PackageTags>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-        <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
+        <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
