Builder moved to QoL

--- a/Benchmarks/Benchmarks.csproj
+++ b/Benchmarks/Benchmarks.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+      <ProjectReference Include="..\IoC.QoL\IoC.QoL.csproj" />
     </ItemGroup>
 
     <ItemGroup>
