--- a/IoC.UnitTests/IoC.UnitTests.csproj
+++ b/IoC.UnitTests/IoC.UnitTests.csproj
@@ -25,7 +25,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+      <ProjectReference Include="..\IoC\IoC.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\IoC\IoC.csproj" />
     </ItemGroup>
 
 </Project>
