--- a/IoC/IoC.csproj
+++ b/IoC/IoC.csproj
@@ -7,7 +7,7 @@
         <Authors>Nikolay Melnikov</Authors>
         <Company>Depra</Company>
         <Description>Domain layer of IoC Container</Description>
-        <Copyright>Copyright © 2022 Nikolay Melnikov. All rights reserved.</Copyright>
+        <Copyright>Copyright © 2022-2024 Nikolay Melnikov. All rights reserved.</Copyright>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <RepositoryType>Module</RepositoryType>
         <RepositoryUrl>https://github.com/Depression-aggression/IoC-Container</RepositoryUrl>
